fixed chat container overflow and laid groundwork for chat rooms

--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -222,6 +222,7 @@
     position: relative;
     padding: 1rem;
     height: 500px;
+    overflow: auto;
 }
 
 .chat-container li.chat-left,
